# embassy-stm32-spi-bug-trigger

./: Cargo.toml  README.md  rust-toolchain.toml  shell.nix
.cargo/: config.toml
src/: main.rs
