[package]
name = "embassy-stm32-spi-bug-trigger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Embedded
embassy-futures = { version = "0.1.0" }

embassy-stm32 = { version = "0.1.0", features = [
    "defmt",
    "stm32f439zi",
    "unstable-pac",
    "memory-x",
    "time-driver-tim3",
    # "time-driver-any",
    "exti",
    "chrono",
] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-executor = { version = "0.5.0", features = [
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.3.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
embassy-usb = { version = "0.2.0", features = ["defmt"] }
embassy-net = { version = "0.4.0", features = [
    "defmt",
    "tcp",
    "dhcpv4",
    "medium-ethernet",
] }
# See https://defmt.ferrous-systems.com/macros for learning more about the custom formats of defmt logs
defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = { version = "0.6.0" }
embedded-io-async = { version = "0.6.1" }
embedded-hal-bus = { version = "0.2.0", features = ["async"] }
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures-util = { version = "0.3.30", default-features = false }
heapless = { version = "0.8", default-features = false }
nb = "1.0.0"
embedded-storage = "0.3.1"

[dev-dependencies]
embedded-test = "0.4.0"

[patch.crates-io]
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy" }
embassy-time = { git = "https://github.com/embassy-rs/embassy" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy" }
embassy-net = { git = "https://github.com/embassy-rs/embassy" }
